--- a/grid_map_msgs/CMakeLists.txt
+++ b/grid_map_msgs/CMakeLists.txt
@@ -23,6 +23,10 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   DEPENDENCIES std_msgs geometry_msgs
 )
 
+install(
+  FILES ros1_bridge_mapping.yaml
+  DESTINATION share/${PROJECT_NAME})
+  
 ament_export_dependencies(rosidl_default_runtime)
 
 ament_package()
