--- a/grid_map_msgs/package.xml
+++ b/grid_map_msgs/package.xml
@@ -24,5 +24,6 @@
 
   <export>
     <build_type>ament_cmake</build_type>
+    <ros1_bridge mapping_rules="ros1_bridge_mapping.yaml"/>
   </export>
 </package>
